# foc

./: .gitignore  README.md  foc.code-workspace  west.yml
fw/: CMakeLists.txt  CURRENT_SENSE_README.md  FOC_README.md  Kconfig  PINOUT.md  foc_431_no_usb.overlay  prj.conf  prj_debug.conf  weact_stm32g431_core.overlay
fw/boards/arm/foc/: Kconfig.foc_431  README.board  board.cmake  board.yml  foc_431.dts  foc_431.yaml  foc_431_defconfig
fw/boards/arm/foc/Doc/stmcube/: stmcube.ioc
fw/dts/bindings/: vendor-prefixes.txt
fw/dts/bindings/sensor/: mps,mt6701.yaml
fw/inc/: adc_dma.h  board.h  cdcacm.h  foc_current_sense.h  foc_math.h  foc_motor.h  foc_pid.h  motor_control.h  mt6701.h  oled.h  pwm_bldc.h
fw/scripts/: upload-config.py  west-commands.yml
fw/src/: cdcacm.c  console.c  main.c  motor_control.c  mt6701.h  oled.c  oled.h  usb_cdc.c  usb_cdc.h
fw/src/drv/: adc_dma.c  mt6701.c  oled.c  pwm_bldc.c
fw/src/foc/: foc_current_sense.c  foc_math.c  foc_motor.c  foc_pid.c  mt6701.c
